Import of DAGOLDEN/IO-All-Rule-0.002 from CPAN.
gitpan-cpan-distribution: IO-All-Rule
gitpan-cpan-version:      0.002
gitpan-cpan-path:         DAGOLDEN/IO-All-Rule-0.002.tar.gz
gitpan-cpan-author:       DAGOLDEN
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,9 +1,8 @@
 NAME
-    IO::All::Rule - File finder based on Path::Iterator::Rule, but using
-    IO::All
+    IO::All::Rule - Iterative, recursive file finder with IO::All
 
 VERSION
-    version 0.001
+    version 0.002
 
 SYNOPSIS
       use IO::All::Rule;
